--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ rlp = "0.4"
 secp256k1 = { version = "0.19", features = ["global-context", "rand-std", "recovery"] }
 sha3 = "0.9"
 tracing = "0.1"
+
+[dev-dependencies]
+hex = "0.4"
+hex-literal = "0.3"
