--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1"
-ethereum = { git = "https://github.com/rust-blockchain/ethereum", default-features = false }
+ethereum = { version = "0.5", default-features = false }
 ethereum-types = "0.9"
 thiserror = "1"
 rlp = "0.4"
